import { GeneratedType } from "@cosmjs/proto-signing";
import { MsgUpdateSubDistributorBurnShareParam } from "./types/c4echain/cfedistributor/tx";
import { MsgUpdateParams } from "./types/c4echain/cfedistributor/tx";
import { MsgUpdateSubDistributorParam } from "./types/c4echain/cfedistributor/tx";
import { MsgUpdateSubDistributorDestinationShareParam } from "./types/c4echain/cfedistributor/tx";

const msgTypes: Array<[string, GeneratedType]>  = [
    ["/chain4energy.c4echain.cfedistributor.MsgUpdateSubDistributorBurnShareParam", MsgUpdateSubDistributorBurnShareParam],
    ["/chain4energy.c4echain.cfedistributor.MsgUpdateParams", MsgUpdateParams],
    ["/chain4energy.c4echain.cfedistributor.MsgUpdateSubDistributorParam", MsgUpdateSubDistributorParam],
    ["/chain4energy.c4echain.cfedistributor.MsgUpdateSubDistributorDestinationShareParam", MsgUpdateSubDistributorDestinationShareParam],
    
];

export { msgTypes }